--- a/templates/chart-cm-sosmed.yaml
+++ b/templates/chart-cm-sosmed.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Values.configMap.name }}
+  namespace: {{ .Values.namespace.namespace }}
   labels:
     app: {{ .Values.labels.app }}
 data:
