--- a/templates/chart-pod-sosmed.yaml
+++ b/templates/chart-pod-sosmed.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: {{ .Values.pod.name }}
+  namespace: {{ .Values.namespace.namespace }}
   labels:
     app: {{ .Values.labels.app }}
 spec:
