--- a/templates/chart-svc-sosmed.yaml
+++ b/templates/chart-svc-sosmed.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.service.name }}
+  namespace: {{ .Values.namespace.namespace }}
 spec:
   selector:
     app: {{ .Values.labels.app }}
